画面番号、ファイル名の表示

--- a/SBOMSystemMockup/Pages/Home.razor
+++ b/SBOMSystemMockup/Pages/Home.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>機械管理台帳</PageTitle>
 
-<h1>機械管理台帳</h1>
+<h1>機械管理台帳 <small class="text-muted">（画面No.1 - Home.razor）</small></h1>
 
 @if (!string.IsNullOrEmpty(errorMessage))
 {
