--- a/SBOMSystemMockup/Pages/PartsFetch.razor
+++ b/SBOMSystemMockup/Pages/PartsFetch.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>部品情報取得</PageTitle>
 
-<h3>部品情報取得</h3>
+<h3>部品情報取得 <small class="text-muted">（画面No.4 - PartsFetch.razor）</small></h3>
 
 <div class="mb-3">
     <label>型式: <input class="form-control d-inline" style="width: 280px;" value="WTD-T16I" /></label>
