--- a/SBOMSystemMockup/Pages/PartsList.razor
+++ b/SBOMSystemMockup/Pages/PartsList.razor
@@ -26,7 +26,7 @@
 
 <div class="card mb-3">
     <div class="card-header bg-primary text-white">
-        <h5 class="mb-0">機械情報</h5>
+        <h5 class="mb-0">機械情報 <small class="text-white-50">（画面No.3 - PartsList.razor）</small></h5>
     </div>
     <div class="card-body">
         <div class="row">
