--- a/SBOMSystemMockup/Pages/MachineDetail.razor
+++ b/SBOMSystemMockup/Pages/MachineDetail.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>機械詳細 - @MachineId</PageTitle>
 
-<h1>機械詳細</h1>
+<h1>機械詳細 <small class="text-muted">（画面No.2 - MachineDetail.razor）</small></h1>
 
 @if (isLoading)
 {
